kops/deployment-chatapp/frontend/lbsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-lb-svc
spec:
  type: LoadBalancer
  selector:
    app: chatapp-frontend
  ports:
    - name: http
      port: 80
      targetPort: frontend-port
