kops/deployment-chatapp/frontend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  selector:
    app: chatapp-frontend
  ports:
    - name: frontend-port
      port: 80
      targetPort: frontend-port
